Implemented fastdep dependency checking under Haiku
Improved error handling with slow dependency update code
Better feedback when examining sources
Replaced internal tooltip code with OS-level ones. R5 tooltips are now completely gone.
The Terminal window now uses a fixed-width font
Implemented basic Locale support under Zeta and Haiku
Edit Program Settings context menu action works for resource files under Haiku now
Worked around a bug in Haiku related to setting the type of a resource file created via Add New File.
Bring the Error window to the front when starting a build
Projects can no longer load a project more than once
Dropping a Paladin project on a project window opens the project
.rdef files are created with a form that can be filled in
Tweaked the file filters for folder and project importing to exclude Jamfiles, Makefiles, and system folders for Git and Mercurial.
Automatically add libsupc++ to new GUI projects under Haiku GCC4
Fixed Run in Debugger under Haiku
Resolved a bug in Haiku which caused hangs for multithreaded builds
Fixed adding files to a module in the code library via file chooser
Automatically remove libsupc++ from Haiku GCC4 projects under other platforms
Preferences window now reports the unavailability of external tools like fastdep and ccache
Source control is (optionally) integrated with projects now: SVN, and Hg
Start window has a keyboard shortcut to choose from the list -- Alt + number
New vector icon for project files
Removed the unnecessary quit button from start window
Added a MIME sniffer rule to the Paladin project type to work around another MIME bug in Haiku
Fixed a bug with duplication of local include paths
Opening a project from Terminal (like "Paladin myproject") now doesn't need the extension and works faster in some cases
Made some small fixes to the makefile generator
A project's directory is now implicitly included in the list of include paths during builds